--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-    <div class="title"> the booleaner </div>
+    <div class=".title"> the booleaner </div>
     </header>
 </body>
 </html>
