--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-    <div class=".title"> the booleaner </div>
-    </header>
+    <header class="header">
+    <h1 class="title"> the booleaner </h1>
+</header>
+
+    
 </body>
 </html>
     
