feat: second section (images)

--- a/index.html
+++ b/index.html
@@ -10,6 +10,18 @@
     <header class="header">
     <h1 class="title"> the booleaner </h1>
 </header>
+<main>
+    <section>
+        <h2>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h2>
+        <p class="author">Scritto da <strong><a href="#">The Booleaner</a></strong><br>10/10/2023</p>
+        <div class="images">
+            <img src="img\tim-1.jpg" alt="Foto di Tim">
+            <img src="img\tim-2.jpg" alt="Foto2 di Tim">
+        </div>
+
+        <p class="caption">1st foto didascalia<br>2nd foto didascalia</p>
+    </section>
+</main>
 
     
 </body>
