--- a/index.html
+++ b/index.html
@@ -7,11 +7,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- titolo -->
     <header class="header">
     <h1 class="title"> the booleaner </h1>
+    <!-- titolo -->
+
 </header>
 <main>
     <section>
+        <!-- introduzione tim  -->
         <h2>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h2>
         <p class="author">Scritto da <strong><a href="#">The Booleaner</a></strong><br>10/10/2023</p>
         <div class="images">
@@ -20,6 +24,51 @@
         </div>
 
         <p class="caption">1st foto didascalia<br>2nd foto didascalia</p>
+        <!-- introduzione tim  -->
+
+<!-- inizio tabella -->
+    </section>
+    <section>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.Quasi deserunt recusandae aliquid necessitatibus laborum nostrum debitis, nemo a consectetur ullam consequuntur neque beatae delectus perspiciatis atque et, iusto facilis! Quaerat?</p>
+        <ul>
+            <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel, quaerat exercitationem omnis dolor corrupti praesentium voluptatum unde. Corporis neque doloribus non ut voluptatum natus, facilis et at cupiditate facere obcaecati.
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis cupiditate dolorem ex aliquam consectetur unde rem ipsam sit magnam vitae, repellendus obcaecati, minima, odio architecto quae expedita nihil magni! Modi!
+                    <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente quaerat quis, odit assumenda officiis unde eveniet odio quos voluptatum beatae harum minima officia quisquam expedita fugit necessitatibus sunt iure. Delectus!
+
+                    </li>
+                </li>
+            </li>
+        </ul>
+        <table>
+            <thead>
+                <tr>
+                    <th>Colonna 1</th>
+                    <th>Colonna 2</th>
+                    <th>Colonna 3</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Lorem ipsum dolor</td>
+                    <td>Lorem ipsum dolor</td>
+                    <td>Lorem ipsum dolor</td>
+                </tr>
+                <tr>
+                    <td>Lorem ipsum dolor</td>
+                    <td>Lorem ipsum dolor</td>
+                    <td>Lorem ipsum dolor</td>
+                </tr>
+                <tr>
+                    <td>Lorem ipsum dolor</td>
+                    <td>Lorem ipsum dolor</td>
+                    <td>Lorem ipsum dolor</td>
+                </tr>
+            </tbody>
+        </table>
+        <!-- inizio tabella -->
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, quibusdam. Odio pariatur eius quos cum asperiores aspernatur veritatis eaque unde fugiat praesentium. Tempora quisquam nemo, dolores veritatis eum iste natus.
+
+        </p>
     </section>
 </main>
 
