feat: last section

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <!-- inizio tabella -->
     </section>
     <section>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.Quasi deserunt recusandae aliquid necessitatibus laborum nostrum debitis, nemo a consectetur ullam consequuntur neque beatae delectus perspiciatis atque et, iusto facilis! Quaerat?</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing.deserunt recusandae aliquid necessitatibus laborum nostrum debitis, nemo a consectetur ullam consequuntur neque beatae delectus perspiciatis atque et, iusto facilis! Quaerat?</p>
         <ul>
             <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel, quaerat exercitationem omnis dolor corrupti praesentium voluptatum unde. Corporis neque doloribus non ut voluptatum natus, facilis et at cupiditate facere obcaecati.
                 <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis cupiditate dolorem ex aliquam consectetur unde rem ipsam sit magnam vitae, repellendus obcaecati, minima, odio architecto quae expedita nihil magni! Modi!
@@ -66,13 +66,16 @@
             </tbody>
         </table>
         <!-- inizio tabella -->
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, quibusdam. Odio pariatur eius quos cum asperiores aspernatur veritatis eaque unde fugiat praesentium. Tempora quisquam nemo, dolores veritatis eum iste natus.
-
-        </p>
+        <div>Lorem ipsum dolor sit amet consectetur adipisicing.Quae, quibusdam. Odio pariatur eius quos cum asperiores aspernatur veritatis eaque unde fugiat praesentium. Tempora quisquam nemo, dolores veritatis eum iste natus.
+        </div>
+    </section>
+    <section>
+        <p class="related-title">Potrebbere interessarti</p>
+       <h2 class="related-h2">lorem ipsum dolor</h2>
+       <br>
+       <h3 class="related-h3">lorem ipsum dolor</h2>
     </section>
 </main>
-
-    
 </body>
 </html>
     
